[package]
name = "gxhash"
authors = ["Olivier Giniaux"]
version = "3.1.1"
edition = "2021"
description = "GxHash non-cryptographic algorithm"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ogxd/gxhash"
documentation = "https://docs.rs/gxhash/latest/gxhash"
keywords = ["hash", "hasher", "hashmap", "no-std", "crypto"]
categories = ["algorithms", "data-structures", "no-std"]
exclude = ["article/*"]

[features]
default = ["std"]
std = []
# Only relevant for throughput benchmarks
bench-csv = []
bench-md = []
bench-plot = []

[dependencies]
rand = "0.8"

[dev-dependencies]
lazy_static = { version = "1.4" }
itertools = "0.12.0"
# Benchmarks
criterion = { version = "0.5.1" }
# Other hash algorithms, for comparison.
ahash = "0.8.6"
t1ha = "0.1.0"
twox-hash = "1.6.3"
highway = "1.1.0"
seahash = "4.1.0"
metrohash = "1.0.6"
fnv = "1.0.3"

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies.plotters]
version = "0.3.5"
default-features = false
features = ["plotters-svg", "line_series"]

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "throughput_criterion"
harness = false

[[bench]]
name = "ilp"
harness = false

[[bench]]
name = "hashset"
harness = false

[[bench]]
name = "quality"
harness = false